Add several useful views
